# CAPITALIST_CO

./: .editorconfig  .flake8  .pre-commit-config.yaml  Makefile  README.md  README.rst  pyproject.toml
core/: manage.py
core/core/utils/: collections.py  misc.py  settings.py
core/main/settings/: __init__.py  base.py  envvars.py
core/main/settings/templates/: settings.dev.py
